# DBMS_CEP

./: Imports.py  app.py  app2.py  app4.py  data.json  database.py  forms.py  helper.py  models.py  prac.py  pyproject.toml  sign_log.py  tempCodeRunnerFile.py
__pycache__/static/: jobs.js
db_application/: app.py  database.py  forms.py  tempCodeRunnerFile.py
db_application/instance/: testdb.db
db_application/migrations/versions/: 1626a6264e86_.py
db_application/templates/: company.html  emp.html  home.html  login.html  register.html  signup.html  text.txt
migrations/versions/: 7c911b98e8fe_updated_job_status_enum_and_job_.py
templates/: Browse_jobs.html  Edit_company_jobs.html  apply.html  base.html  cand.html  change_password.html  company.html  company_details.html  edit_comp.html  edit_job.html  jobs.html  login.html  my_saved_jobs.html  myjobs.html  post_job.html  recieved_jobs.html  saved_Job.html  signup.html  view_appli.html  view_jobs.html
